fix: Enhancement in account path parameter
